# credit-ocr-system

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  run_api.py  start_credit_ocr.py
config/: credit-ocr-system.conf  document_types.conf
database/: README.md
database/schemas/: schema.sql
notebooks/1-setup/: 01_setup.ipynb  README.md
notebooks/2-ocr-based-text-extraction/: 02_ocr_text_extraction.ipynb  README.md
notebooks/3-llm-field-extraction/: 03_llm_field_extraction.ipynb  README.md
notebooks/4-function-integration/: 04_integration.ipynb  README.md
notebooks/5-dms-upload/: 05_dms_upload.ipynb  README.md
notebooks/6-document-processing-status/: 06_document_processing_status.ipynb  README.md
notebooks/7-async-processing/: 07_async_processing.ipynb  README.md
notebooks/8-api-service/: 08_api_service.ipynb  README.md
notebooks/9-application-setup/: README.md  setup.ipynb
src/: async_processing.py  celery_app.py
src/api/: README.md  config.py  main.py  models.py  routes.py
src/api/templates/: index.html
src/config/: __init__.py  system.py
src/dms/: __init__.py  adapters.py  environment.py  interfaces.py  service.py
src/integration/: pipeline.py
src/llm/: client.py  config.py  field_extractor.py  validation.py
src/ocr/: easyocr_client.py  label_value_extraction.py  postprocess.py  spatial_analysis.py
src/storage/: blob_operations.py  storage.py
src/tasks/: pipeline_tasks.py
src/visualization/: ocr_visualization.py
tests/: conftest.py  test_api.py  test_api_simple.py  test_dms_integration.py  test_integrated_pipeline.py  test_notebook04_integration.py  test_notebook04_workflow.py  test_simple_workflow.py
