[project]
name = "credit-ocr-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "pip>=25.2",
    "requests>=2.32.4",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "psutil>=5.9.0",
]
