[project]
name = "credit-ocr-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "pip>=25.2",
    "requests>=2.32.4",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "psutil>=5.9.0",
    "matplotlib>=3.10.5",
    "pdf2image>=1.17.0",
    "pymupdf>=1.26.3",
    "aiohttp>=3.12.15",
    "dataclasses>=0.8",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "setuptools>=80.9.0",
]
